Added tableview that lists all the available fonts
Anywhere on the clock view can be toched to go to the font list.
However, there’s no way to get back right now. The idea is that
selecting one of the fonts will take you back to the clock view.

--- a/NativeBedsideClock/Main.storyboard
+++ b/NativeBedsideClock/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="lvk-V7-kXU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="c8Z-eg-9O8">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -19,24 +19,92 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clock" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPO-nW-Spy">
                                 <rect key="frame" x="20" y="273" width="280" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
+                                </accessibility>
+                                <gestureRecognizers/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="Rd2-iB-If9" appends="YES" id="NCv-Jf-sC1"/>
+                                    <outletCollection property="gestureRecognizers" destination="Rd2-iB-If9" appends="YES" id="D35-jP-chC"/>
+                                </connections>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <accessibilityTraits key="traits" none="YES" notEnabled="YES"/>
+                        </accessibility>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="QPO-nW-Spy" firstAttribute="top" secondItem="Zpo-CJ-2kT" secondAttribute="bottom" constant="253" id="ItV-cs-co4"/>
+                            <constraint firstItem="QPO-nW-Spy" firstAttribute="top" secondItem="Zpo-CJ-2kT" secondAttribute="bottom" constant="209" id="ItV-cs-co4"/>
                             <constraint firstItem="QPO-nW-Spy" firstAttribute="leading" secondItem="CGx-3L-ovv" secondAttribute="leading" constant="20" id="aiH-S2-uMd"/>
                             <constraint firstAttribute="trailing" secondItem="QPO-nW-Spy" secondAttribute="trailing" constant="20" id="fux-yR-k6j"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Rd2-iB-If9" appends="YES" id="g91-hQ-GTL"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="Ph2-B1-DEv"/>
                     <connections>
                         <outlet property="timeLabel" destination="QPO-nW-Spy" id="c9f-0b-UXN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z83-t9-dwr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Rd2-iB-If9">
+                    <connections>
+                        <segue destination="LZh-6Z-hwp" kind="push" id="4BL-2C-qaJ"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="70" y="76"/>
+            <point key="canvasLocation" x="1135" y="76"/>
+        </scene>
+        <!--Font Table View Controller-->
+        <scene sceneID="aXd-bs-lRt">
+            <objects>
+                <tableViewController id="LZh-6Z-hwp" customClass="DKAFontTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Caz-BZ-4rZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FontCell" id="5gP-55-SOC">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5gP-55-SOC">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="LZh-6Z-hwp" id="0ho-Bb-Xfh"/>
+                            <outlet property="delegate" destination="LZh-6Z-hwp" id="R5K-zA-5As"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="jM1-3o-qcV"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rLb-r6-CVg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1631" y="76"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4qo-Hl-oug">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="c8Z-eg-9O8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VEd-4f-sEc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="lvk-V7-kXU" kind="relationship" relationship="rootViewController" id="KXj-lD-Agi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6YR-5w-mXN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="609" y="76"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
