Updated to use fonts
Font TableView now renders font list with corresponding font
Selecting a font now unwinds back to clock view with the correct font.

--- a/NativeBedsideClock/Main.storyboard
+++ b/NativeBedsideClock/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="c8Z-eg-9O8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="LYh-c6-JBs">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -16,14 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clock" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPO-nW-Spy">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Clock" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QPO-nW-Spy">
                                 <rect key="frame" x="20" y="273" width="280" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
                                 </accessibility>
                                 <gestureRecognizers/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="highlightedColor"/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="Rd2-iB-If9" appends="YES" id="NCv-Jf-sC1"/>
@@ -36,11 +36,6 @@
                             <accessibilityTraits key="traits" none="YES" notEnabled="YES"/>
                         </accessibility>
                         <gestureRecognizers/>
-                        <constraints>
-                            <constraint firstItem="QPO-nW-Spy" firstAttribute="top" secondItem="Zpo-CJ-2kT" secondAttribute="bottom" constant="209" id="ItV-cs-co4"/>
-                            <constraint firstItem="QPO-nW-Spy" firstAttribute="leading" secondItem="CGx-3L-ovv" secondAttribute="leading" constant="20" id="aiH-S2-uMd"/>
-                            <constraint firstAttribute="trailing" secondItem="QPO-nW-Spy" secondAttribute="trailing" constant="20" id="fux-yR-k6j"/>
-                        </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="Rd2-iB-If9" appends="YES" id="g91-hQ-GTL"/>
                         </connections>
@@ -57,7 +52,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1135" y="76"/>
+            <point key="canvasLocation" x="1661" y="76"/>
         </scene>
         <!--Font Table View Controller-->
         <scene sceneID="aXd-bs-lRt">
@@ -68,13 +63,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FontCell" id="5gP-55-SOC">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FontCell" id="5gP-55-SOC">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5gP-55-SOC">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="u5w-gq-x5g" kind="unwind" unwindAction="unwindToClock:" id="r2A-jw-5XD"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -85,26 +83,27 @@
                     <navigationItem key="navigationItem" id="jM1-3o-qcV"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rLb-r6-CVg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="u5w-gq-x5g" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1631" y="76"/>
+            <point key="canvasLocation" x="2157" y="76"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="4qo-Hl-oug">
+        <scene sceneID="BYI-h8-fwb">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="c8Z-eg-9O8" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="LYh-c6-JBs" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VEd-4f-sEc">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wEw-JR-up5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="lvk-V7-kXU" kind="relationship" relationship="rootViewController" id="KXj-lD-Agi"/>
+                        <segue destination="lvk-V7-kXU" kind="relationship" relationship="rootViewController" id="s8J-N3-dTc"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6YR-5w-mXN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CQg-aY-4Ke" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="609" y="76"/>
+            <point key="canvasLocation" x="1135" y="76"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
